--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <title>Inicio - Cuenca </title>
         <meta charset="utf-8" />
         <link href="css/home.css" rel="stylesheet" />
-        <link href="css/contenido.css" rel="stylesheet" />
+        <link href="css/contenidoHome.css" rel="stylesheet" />
+        <link href="css/comun.css" rel="stylesheet" />
     </head>
     <body>
         <header id="cabecera">
@@ -173,7 +174,7 @@
     
                 <div class="team">
                     <img src="images/bryan3.jpg" alt="">
-                    <input class="btn" type="submit" value="Claudio Mogrovejo / Detalles">
+                    <input class="btn" type="submit" value="Nemo Montenegro / Detalles">
                 </div>
             </div>
         </div>
@@ -181,16 +182,16 @@
         <footer id="pie">
             <div class="cont_pie">
                 <div id="logo_pie">
-                    <img src="images/faceLogo.png" alt="">
-                    <img src="images/instaLogo.png" alt="">
+                    <a href="https://www.facebook.com/" target="_blank"><img src="images/faceLogo.png" alt=""></a>
+                    <a href="https://www.instagram.com/" target="_blank"><img src="images/instaLogo.png" alt=""></a>
                 </div>
                 <img src="images/logoSO.png" alt="">
 
                 <p>
                     Sarmiento Basurto Douglas Bryan <br />
-                    <a href="mailto:dsarmientob1@est.ups.edu.ec">dsarmientob1@est.ups.edu.ec</a>
-                    <a href="tel:+593996917211">+593996917211</a> <br />
                     Universidad Politécnica Salesiana <br />
+                    <span><strong>Correo :</strong><a href="mailto:dsarmientob1@est.ups.edu.ec"> dsarmientob1@est.ups.edu.ec</a></span> <br />
+                    <span><strong>Telf. :</strong><a href="tel:+593996917211"> +593996917211</a></span><br />
                     &copy; Todos los derechos reservados
                 </p>
             </div>
