--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <li><a href="docs/fiestas.html" > Fiestas Principales </a></li>
                     <li><a href="docs/gastronomia.html" > Gastronomía </a></li>
                     <li><a href="docs/educacion.html" > Educación Superior </a></li>
-                    <li><a href="docs/educacion.html" > Contacto </a></li>
+                    <li><a href="docs/formulario.html" > Contacto </a></li>
                 </ul>
             </nav>
         </header>
