--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header id="cabecera">
-            <img id="logoPrincipal" src="images/logo.gif" width="1000" alt="Cuenca, la Atenas del Ecuador" />
+            <img id="logoPrincipal" src="images/logo.gif" alt="Cuenca, la Atenas del Ecuador" />
             
             <form>
                 <input type="search" id="busqueda" name="busqueda" placeholder="Buscar">
